--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
+    "react-autosuggest": "^9.4.0",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
